--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       background-color: #000000;
       color: #FFFFFF;
       font-family: "Droid Sans", monospace, sans-serif;
+      font-size: 200%;
     }
 
     .widget {
@@ -14,7 +15,7 @@
     }
 
     .widget-big {
-      font-size: 24px;
+      font-size: 300%;
     }
   </style>
 </head>
