--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title></title>
   <style type="text/css">
     body {
       background-color: #000000;
-      color: #FFFFFF;
+        color: #FFFFFF;
       font-family: "Droid Sans", monospace, sans-serif;
       font-size: 200%;
     }
