test webservice call

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background-color: #000000;
         color: #FFFFFF;
       font-family: "Droid Sans", monospace, sans-serif;
-      font-size: 200%;
+      font-size: 250%;
     }
 
     .widget {
@@ -21,7 +21,9 @@
   </style>
 </head>
 <body>
-  <div class="widget">Hello</div>
-  <div class="widget widget-big">World</div>
+  <div id="date" class="widget"></div>
+  <div time="time" class="widget widget-big"></div>
+  <script src="lib/js/jquery-3.1.0.min.js"></script>
+  <script src="js/datetime.js"></script>
 </body>
 </html>
