--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
     .widget-big {
       font-size: 300%;
     }
+
+    small {
+      font-size: 40%;
+    }
   </style>
 </head>
 <body>
+  <div class="widget weather" location="Clichy"></div>
+  <div class="widget weather" location="Reykjavìk"></div>
   <div id="date" class="widget"></div>
   <div time="time" class="widget widget-big"></div>
   <script src="lib/js/jquery-3.1.0.min.js"></script>
+  <script src="js/weather.js"></script>
   <script src="js/datetime.js"></script>
 </body>
 </html>
