add time + schedule refresh

--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
 
     .widget {
       width: 100%;
-    }
-
-    .widget-big {
-      font-size: 300%;
+      display: row;
     }
 
     small {
       font-size: 40%;
     }
+
+    big {
+      font-size: 300%;
+    }
   </style>
 </head>
 <body>
+  <div class="datetime widget"></div>
   <div class="widget weather" location="Clichy"></div>
   <div class="widget weather" location="Reykjavìk"></div>
-  <div id="date" class="widget"></div>
-  <div time="time" class="widget widget-big"></div>
   <script src="lib/js/jquery-3.1.0.min.js"></script>
+  <script src="lib/js/jquery-dateFormat.min.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/datetime.js"></script>
 </body>
